--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,12 +5,17 @@ stats = View internal system data
 
 user_added = new user added successfully.
 
-login=Login
-user.is.not.logged.in = Please log in
-password=Password
-name=Name
-send=Send
-logout=Logout
+# MENU
+menu.sistema=Sistemas
+menu.usuario=Usuários
+
+
+# LOGIN
+login.usuario=Usuário
+login.senha=Senha
+login.nome=Nome
+login.enviar=Enviar
+login.logout=Logout
 
 new_user_message=If you are not registered, do it now:
 
