alterado banco de dados p/ mysql

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ stats = View internal system data
 user_added = new user added successfully.
 
 # MENU
+menu.home=Home
 menu.sistema=Sistemas
 menu.usuario=Usuários
 
@@ -16,6 +17,7 @@ login.senha=Senha
 login.nome=Nome
 login.enviar=Enviar
 login.logout=Logout
+login.erro=Usuário e/ou Senha Inválidos
 
 new_user_message=If you are not registered, do it now:
 
